--- a/future/future_of_work/templates/pages/lesson_detail.html
+++ b/future/future_of_work/templates/pages/lesson_detail.html
@@ -237,5 +237,10 @@
                 </p>
             {% endif %}
         </section>
+
+        <!-- Footer -->
+        <footer class="relative z-10 mt-auto py-6 text-center text-gray-500 text-xs">
+            &copy; {% now 'Y' %} Future Of Work | Owlpha Digital Hub Limited
+        </footer>
     </body>
 </html>
