--- a/future/future_of_work/templates/pages/lessons.html
+++ b/future/future_of_work/templates/pages/lessons.html
@@ -181,6 +181,11 @@
     <div id="toast-container" class="fixed bottom-4 right-4 z-50 flex flex-col gap-2"></div>
 
     <script src="{% static 'js/lessons.js'%}"></script>
+
+    <!-- Footer -->
+    <footer class="relative z-10 mt-auto py-6 text-center text-gray-500 text-xs">
+      &copy; {% now 'Y' %} Future Of Work | Owlpha Digital Hub Limited
+    </footer>
   </body>
 </html>
 
